implementing endpoint /orders/{id} GET
