# src/main/resources/openapi.yaml
@@ -26,11 +26,36 @@ paths:
       responses:
         '201':
           description: Order created
-
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/CreateOrderResponse'
+
+  /orders/{orderId}:
+    get:
+      tags:
+        - Order
+      summary: Get order by id
+      operationId: getOrderById
+
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+
+      responses:
+        '200':
+          description: Order found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetOrderResponse'
+
+        '404':
+          description: Order not found
 
 components:
 
@@ -58,7 +83,6 @@ components:
         - quantity
 
       properties:
-
         productId:
           type: string
           format: uuid
@@ -71,13 +95,35 @@ components:
       type: object
 
       properties:
-
         orderId:
+          type: string
+
+        status:
+          $ref: '#/components/schemas/OrderStatus'
+
+    GetOrderResponse:
+      type: object
+
+      properties:
+        orderId:
+          type: string
+
+        customerId:
           type: string
           format: uuid
 
         status:
           $ref: '#/components/schemas/OrderStatus'
+
+        createdAt:
+          type: string
+          format: date-time
+
+        items:
+          type: array
+
+          items:
+            $ref: '#/components/schemas/OrderItem'
 
     OrderStatus:
       type: string
@@ -85,3 +131,5 @@ components:
       enum:
         - CREATED
         - PAYMENT_PENDING
+        - PAYMENT_APRROVED
+        - COMPLETED
